// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Result Display tests Render result for error result 1`] = `
<div
  className="callout alert"
>
  <div
    className="grid-x display"
  >
    <div
      className="cell small-6 medium-4 large-4"
    >
      <a
        href="https://www.error.com/job/"
        rel="noopener noreferrer"
        target="_blank"
      >
        <h4
          className="sc-bdVaJa jAtYUa"
        >
          Error.com
        </h4>
      </a>
    </div>
    <div
      className="cell result-message small-6 medium-6 large-4"
    >
      Error: Problem accessing page
    </div>
  </div>
</div>
`;

exports[`Result Display tests Render result for good results 1`] = `
<div
  className="callout primary"
>
  <div
    className="grid-x display"
  >
    <div
      className="cell small-6 medium-4 large-4"
    >
      <a
        href="https://www.example.com/job/"
        rel="noopener noreferrer"
        target="_blank"
      >
        <h4
          className="sc-bdVaJa jAtYUa"
        >
          Example.com
        </h4>
      </a>
    </div>
  </div>
  <div
    className="grid-x display"
  >
    <div
      className="cell small-4 medium-3 large-4"
    >
      <span
        className="sc-bwzfXH dEHPaE"
      >
        <a
          href="https://www.example.com/job/ABC123"
          rel="noopener noreferrer"
          target="_blank"
        >
          Job Title ABC123
        </a>
      </span>
    </div>
    <div
      className="cell small-4 medium-3 large-4"
    >
      <span
        className="sc-htpNat bkzdGH"
      >
        San Francisco
      </span>
    </div>
    <div
      className="cell small-2 medium-1 large-1"
    >
      <button
        className="jobToggleButton"
        onClick={[Function]}
      >
        Archive
      </button>
    </div>
    <div
      className="cell small-2 medium-1 large-1"
    />
  </div>
</div>
`;

exports[`Result Display tests Render result for good results 2`] = `
<div
  className="callout primary"
>
  <div
    className="grid-x display"
  >
    <div
      className="cell small-6 medium-4 large-4"
    >
      <a
        href="https://www.example.org/job/"
        rel="noopener noreferrer"
        target="_blank"
      >
        <h4
          className="sc-bdVaJa jAtYUa"
        >
          Example.org
        </h4>
      </a>
    </div>
  </div>
  <div
    className="grid-x display"
  >
    <div
      className="cell small-4 medium-3 large-4"
    >
      <span
        className="sc-bwzfXH dEHPaE"
      >
        <a
          href="https://www.example.org/job/ABC456"
          rel="noopener noreferrer"
          target="_blank"
        >
          Job Title ABC456
        </a>
      </span>
    </div>
    <div
      className="cell small-4 medium-3 large-4"
    >
      <span
        className="sc-htpNat bkzdGH"
      >
        San Francisco
      </span>
    </div>
    <div
      className="cell small-2 medium-1 large-1"
    >
      <button
        className="jobToggleButton"
        onClick={[Function]}
      >
        Archive
      </button>
    </div>
    <div
      className="cell small-2 medium-1 large-1"
    />
  </div>
</div>
`;

exports[`Result Display tests Render result for pending result 1`] = `
<div
  className="callout"
>
  <div
    className="grid-x display"
  >
    <div
      className="cell small-6 medium-4 large-4"
    >
      <a
        href="https://www.example.io/job/"
        rel="noopener noreferrer"
        target="_blank"
      >
        <h4
          className="sc-bdVaJa jAtYUa"
        >
          Example.io
        </h4>
      </a>
    </div>
    <div
      className="cell result-message small-6 medium-6 large-4"
    >
      Pending Lookup
    </div>
  </div>
</div>
`;
